# CoScene-VLM

./: .gitignore  README.md
coscene-backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
coscene-backend/agents/: README.md  prompts.py  scene_editor.py
coscene-backend/api/: config.py  main.py  models.py
coscene-backend/api/routes/: scenes.py  sessions.py  websocket.py
coscene-backend/docker/: Dockerfile.api  docker-compose.yml
coscene-backend/evaluation/: README.md  __init__.py  config.yaml  generate_dataset.py  run_evaluation.py  test_metrics.py
coscene-backend/evaluation/datasets/complex/: README.md  test_dataset.json
coscene-backend/evaluation/datasets/medium/: README.md  test_dataset.json
coscene-backend/evaluation/datasets/simple/: README.md  test_dataset.json
coscene-backend/evaluation/generators/: __init__.py  prompt_generator.py  template_library.py  usd_generator.py
coscene-backend/evaluation/metrics/: __init__.py  semantic_metrics.py  structural_metrics.py  visual_metrics.py
coscene-backend/scripts/: blender_render.py  init_db.sql
coscene-backend/services/: database.py  render_service.py  storage.py  usd_service.py
coscene-frontend/: .env.example  README.md  index.html  package-lock.json  package.json
coscene-frontend/src/: App.tsx  index.css  main.tsx
coscene-frontend/src/components/: SessionRedirect.tsx
coscene-frontend/src/hooks/: useSceneLoader.ts  (+1 more)
diffusion/: README.md  clip_verifier.py  diffusion_gen.py  pipeline.py  planner.py  refine.py  requirements.txt  run_one.py  run_simulated_studies.py
(+11 files in other folders)
