[tool.poetry]
name = "coscene-backend"
version = "0.1.0"
description = "Agentic 3D Scene Editing Backend with LangGraph and USD"
authors = ["Kshitij Chandna <kc3930@columbia.edu>", "Jack Harris <jh4853@columbia.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
alembic = "^1.13.1"
langgraph = "^0.0.40"
langchain = "^0.1.0"
langchain-anthropic = "^0.1.0"
anthropic = "^0.18.0"
usd-core = "^23.11"
python-dotenv = "^1.0.0"
redis = "^5.0.1"
httpx = "^0.26.0"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
black = "^23.12.0"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
